fix: hero alignment

--- a/Frontend/src/pages/countdown/Countdown.module.css
+++ b/Frontend/src/pages/countdown/Countdown.module.css
@@ -370,7 +370,11 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    margin-left: -100px;
+
+    .heroLayout {
+        margin-left: 0;
+
+    }
 }
 
 @media (min-width: 1024px) {
